--- a/src/pages/asset/prop.astro
+++ b/src/pages/asset/prop.astro
@@ -36,7 +36,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Triangle counts of some vanilla props"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">Triangle counts of some vanilla props.</p>
@@ -84,7 +84,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Comparison between main and LOD meshes for the vanilla grill kiosk"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">Comparison between main and LOD meshes for the vanilla grill kiosk.</p>
@@ -106,7 +106,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Example UV mapping using visible horizontal tiling on the bottom"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-square object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">Example UV mapping using visible horizontal tiling on the bottom.</p>
@@ -130,7 +130,7 @@ import { images } from '../../data/imageImports.js';
 							alt="UV mapping for LOD mesh using automatic mapping in 3ds Max"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-square object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">
@@ -174,7 +174,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Vertex painting in 3ds Max"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">Vertex painting in 3ds Max.</p>
@@ -197,7 +197,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Infinitely thin triangles made by putting 2 of the 3 vertices in the same place"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">Infinitely thin triangles made by putting 2 of the 3 vertices in the same place.</p>
@@ -229,7 +229,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Texture sizes of various vanilla assets"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">Texture sizes of various vanilla assets. See the resolution in the top right corner of the preview window.</p>
@@ -280,7 +280,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Example diffuse texture for a conveyor prop"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-square object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/></a
 						><p class="explanation">Example diffuse texture for a conveyor prop.</p>
@@ -295,7 +295,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Color guidelines"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-square object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/></a
 						><p class="explanation">Color guidelines.</p>
@@ -327,7 +327,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Example alpha texture for some railings and metal beams"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-video object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/></a
 						><p class="explanation">Example alpha texture for some railings and metal beams.</p>
@@ -341,7 +341,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Example alpha texture for some railings and metal beams"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-video object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/></a
 						><p class="explanation">
@@ -377,7 +377,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Example illumination map for a torch"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="max-h-40 max-w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">Example illumination map for a torch.</p>
@@ -400,7 +400,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Example specular map for a roof water tank"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-square object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/></a
 						><p class="explanation">Example specular map for a roof water tank.</p>
@@ -414,7 +414,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Transitions between different specular values produce artifacts on the normal map and vice versa"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-video object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/></a
 						><p class="explanation">
@@ -460,7 +460,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Example normal map for rocks"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-square object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/></a
 						><p class="explanation">Example normal map for rocks.</p>
@@ -474,7 +474,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Example normal map problem"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-video object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/></a
 						><p class="explanation">Problem: normal maps appear incorrectly if the asset importer mesh rotation feature is used.</p>
@@ -489,7 +489,7 @@ import { images } from '../../data/imageImports.js';
 								alt="Image shows the same flat normal map on faces with different UV rotation/flip"
 								format="webp"
 								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-video object-cover"
+								class="h-auto w-full"
 								loading="eager"
 							/>
 						</a><p class="explanation">
@@ -544,7 +544,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Files ready for import"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">Files ready for import.</p>
@@ -597,7 +597,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Importing a mesh in asset importer"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">Importing a mesh in asset importer.</p>
@@ -709,7 +709,7 @@ import { images } from '../../data/imageImports.js';
 							alt="ModTools scene explorer and console"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-max w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">ModTools scene explorer and console.</p>
@@ -768,7 +768,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Comparison between Default (left), Fence (middle) and Decal (right) prop shaders."
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a>
@@ -810,7 +810,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Prop variations menu in the asset editor"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">Prop variations menu in the asset editor.</p>
@@ -872,7 +872,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Save asset window"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-square object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">Save asset window.</p>
@@ -913,7 +913,7 @@ import { images } from '../../data/imageImports.js';
 							alt="CRP files in the local assets folder"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">CRP files in the local assets folder.</p>
@@ -935,7 +935,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Share button in content manager"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">Share button in content manager.</p>
@@ -966,7 +966,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Publish window and content folder"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">Publish window and content folder.</p>
@@ -1030,7 +1030,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Publish window and content folder"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
+							class="h-auto w-full"
 							loading="eager"
 						/>
 					</a><p class="explanation">Comparison between local (top) and workshop published (bottom) prefab names shown in ModTools.</p>
