--- a/src/pages/asset/prop.astro
+++ b/src/pages/asset/prop.astro
@@ -377,7 +377,7 @@ import { images } from '../../data/imageImports.js';
 							alt="Example illumination map for a torch"
 							format="webp"
 							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="max-h-40 max-w-full"
+							class="max-h-[16rem] max-w-full"
 							loading="eager"
 						/></a
 					><p class="explanation">Example illumination map for a torch.</p>
