--- a/src/pages/asset/building.astro
+++ b/src/pages/asset/building.astro
@@ -39,7 +39,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 				<a href="/images/asset/building/tris.jpg" target="_blank">
 					<Picture
 						src={images.tris}
-						width={images.tris.width / 2}
+						width={images.tris.width / 3}
 						densities={[1.5, 2]}
 						formats={['avif', 'webp']}
 						alt="Triangle counts of some vanilla buildings"
@@ -92,7 +92,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 				<a href="/images/asset/building/lodmesh.jpg" target="_blank">
 					<Picture
 						src={images.lodmesh}
-						width={images.lodmesh.width / 2}
+						width={images.lodmesh.width / 3}
 						densities={[1.5, 2]}
 						formats={['avif', 'webp']}
 						alt="Comparison between main and LOD meshes for a large and small building."
@@ -220,8 +220,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 				</p>
 			</div>
 			<div class="lg:w-1/3">
-				<a href="/images/asset/building/textures.jpg" target="_blank"
-					>
+				<a href="/images/asset/building/textures.jpg" target="_blank">
 					<Picture
 						src={images.textures}
 						width={images.textures.width / 2}
