--- a/src/pages/asset/building.astro
+++ b/src/pages/asset/building.astro
@@ -39,7 +39,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 				<a href="/images/asset/building/tris.jpg" target="_blank">
 					<Picture
 						src={images.tris}
-						width={images.tris.width / 3}
+						width={images.tris.width / 4}
 						densities={[1.5, 2]}
 						formats={['avif', 'webp']}
 						alt="Triangle counts of some vanilla buildings"
@@ -92,7 +92,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 				<a href="/images/asset/building/lodmesh.jpg" target="_blank">
 					<Picture
 						src={images.lodmesh}
-						width={images.lodmesh.width / 3}
+						width={images.lodmesh.width / 4}
 						densities={[1.5, 2]}
 						formats={['avif', 'webp']}
 						alt="Comparison between main and LOD meshes for a large and small building."
@@ -1339,8 +1339,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 		<p class="text-lg mt-4 text-hit-gray-500">
 			This section covers some specific types of buildings which do not have a template or require special instructions. It will also make references to
 			<Link href="/modtools/" theme="internallink" text="using ModTools" classes="" />, and other mods mentioned in the
-			<Link href="#editor-advanced" theme="internallink" text="editor advanced section" classes="" />
-			<a href=""></a>.
+			<Link href="#editor-advanced" theme="internallink" text="editor advanced section" classes="" /> .
 		</p>
 		<p class="text-lg mt-4 text-hit-gray-500">
 			For buildings such as stations and harbors,
