--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -94,6 +94,7 @@ const sidebarItems = [
 			<button
 				id="close-sidebar"
 				class="block p-1 text-hit-gray-100 hover:bg-gray-100 hover:text-hit-gray-800 focus:outline-none focus:ring-2 focus:ring-gray-200 rounded-lg"
+				aria-label="Close sidebar"
 			>
 				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
 					<path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
