--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,7 +21,7 @@ const title = 'About - Cities Skylines Modding';
 				/>
 			</p>
 			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="credits">Credits</h2>
-			<p class="mt-4">Original Design, development, CS I content: Ronyx69</p>
+			<p class="mt-4">Original design, development, CS I content: Ronyx69</p>
 			<p class="mt-4">Website remake, development, CS II content: ComradeIntense</p>
 			<p class="mt-4">Development help: Cozonaq, Egi, boformer, Quboid, whitemsv</p>
 			<p class="mt-4">Home page icons: Hadece</p>
