--- a/src/pages/asset/building.astro
+++ b/src/pages/asset/building.astro
@@ -44,7 +44,7 @@ const title = 'Building Asset Creation - Cities Skylines Modding';
 						formats={['avif', 'webp']}
 						alt="Triangle counts of some vanilla buildings"
 						format="webp"
-						class="h-auto w-full"
+						class="h-auto w-full hover:scale-150 transition duration-500 cursor-pointer"
 						loading="eager"
 					/></a
 				>
