--- a/src/pages/asset/tree.astro
+++ b/src/pages/asset/tree.astro
@@ -3,7 +3,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import Link from '../../components/Link.astro';
 import TableOfContents from '../../components/TableOfContents.astro';
 const title = 'Tree Asset Creation - Cities Skylines Modding';
-import ResponsiveImage from '../../components/ResponsiveImage.astro';
+import { Picture } from 'astro:assets';
 import { images } from '../../data/imageImports.js';
 ---
 
@@ -41,16 +41,13 @@ import { images } from '../../data/imageImports.js';
 					</p><p class="mt-4">The absolute limit for a mesh is 65536 vertices.</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/tree/treetris.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.treetris.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.treetris}
-							naturalHeight={437}
-							naturalWidth={1488}
-							srcWidths={[300, 400, 800, 1000]}
 							alt="Triangle counts for a couple of vanilla trees"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/></a
 					><p class="explanation">Triangle counts for a couple of vanilla trees.</p>
 				</div>
@@ -83,16 +80,13 @@ import { images } from '../../data/imageImports.js';
 					<p>You are allowed to UV map outside the 0-1 area (main tile), so you can tile the entire texture multiple times on a single face.</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/building/uv_main.jpg" target="_blank"
-						><ResponsiveImage
+						><Picture
+							width={images.uv_main.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.uv_main}
-							naturalHeight={437}
-							naturalWidth={560}
-							srcWidths={[300, 400, 500]}
 							alt="Example UV mapping using visible horizontal tiling on the bottom"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-square object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/></a
 					><p class="explanation">Example UV mapping using visible horizontal tiling on the bottom.</p>
 				</div>
@@ -148,31 +142,25 @@ import { images } from '../../data/imageImports.js';
 				</div><div class="lg:w-1/3">
 					<div class="">
 						<a href="/images/asset/tree/treetextures.jpg" target="_blank">
-							<ResponsiveImage
+							<Picture
+								width={images.treetextures.width / 2}
+								densities={[1.5, 2]}
+								formats={['avif', 'webp']}
 								src={images.treetextures}
-								naturalHeight={256}
-								naturalWidth={384}
-								srcWidths={[300, 350]}
 								alt="Textures for a couple of vanilla trees"
-								format="webp"
-								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-video object-cover"
-								loading="eager"
+								class="h-auto w-full"
 							/></a
 						><p class="explanation">Textures for a couple of vanilla trees.</p>
 					</div>
 					<div class="mt-4">
 						<a href="/images/asset/building/color_guidelines.png" target="_blank"
-							><ResponsiveImage
+							><Picture
+								width={images.color_guidelines.width / 2}
+								densities={[1.5, 2]}
+								formats={['avif', 'webp']}
 								src={images.color_guidelines}
-								naturalHeight={1024}
-								naturalWidth={1024}
-								srcWidths={[300, 400, 800, 1000]}
 								alt="Color guidelines"
-								format="webp"
-								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-square object-cover"
-								loading="eager"
+								class="h-auto w-full"
 							/></a
 						><p class="explanation">Color guidelines.</p>
 					</div>
@@ -188,30 +176,24 @@ import { images } from '../../data/imageImports.js';
 				</div><div class="lg:w-1/3">
 					<div class="">
 						<a href="/images/asset/building/textures_alpha.jpg" target="_blank"
-							><ResponsiveImage
+							><Picture
+								width={images.textures_alpha.width / 2}
+								densities={[1.5, 2]}
+								formats={['avif', 'webp']}
 								src={images.textures_alpha}
-								naturalHeight={220}
-								naturalWidth={306}
-								srcWidths={[200, 300]}
 								alt="Example alpha texture for some railings and metal beams"
-								format="webp"
-								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-video object-cover"
-								loading="eager"
+								class="h-auto w-full"
 							/></a
 						><p class="explanation">Example alpha texture for some railings and metal beams.</p>
 					</div><div class="mt-4">
 						<a href="/images/asset/building/textures_alpha_rail.jpg" target="_blank">
-							<ResponsiveImage
+							<Picture
+								width={images.textures_alpha_rail.width / 2}
+								densities={[1.5, 2]}
+								formats={['avif', 'webp']}
 								src={images.textures_alpha_rail}
-								naturalHeight={128}
-								naturalWidth={256}
-								srcWidths={[200, 250]}
 								alt="Example alpha texture for some railings and metal beams"
-								format="webp"
-								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
 								class="h-auto w-full aspect-video"
-								loading="eager"
 							/></a
 						><p class="explanation">
 							Using lighter values for the invisible parts will decrease the chance of small details like railings disappearing completely.
@@ -253,30 +235,24 @@ import { images } from '../../data/imageImports.js';
 				</div><div class="lg:w-1/3">
 					<div class="">
 						<a href="/images/asset/tree/treenormal.jpg" target="_blank">
-							<ResponsiveImage
+							<Picture
+								width={images.treenormal.width / 2}
+								densities={[1.5, 2]}
+								formats={['avif', 'webp']}
 								src={images.treenormal}
-								naturalHeight={256}
-								naturalWidth={256}
-								srcWidths={[200, 250]}
 								alt="Example normal map for a plant"
-								format="webp"
-								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-								class="h-auto w-full aspect-square object-cover"
-								loading="eager"
+								class="h-auto w-full"
 							/></a
 						><p class="explanation">Example normal map for a plant.</p>
 					</div><div class="mt-4">
 						<a href="/images/asset/building/textures_normal_problem.jpg" target="_blank"
-							><ResponsiveImage
+							><Picture
+								width={images.textures_normal_problem.width / 2}
+								densities={[1.5, 2]}
+								formats={['avif', 'webp']}
 								src={images.textures_normal_problem}
-								naturalHeight={633}
-								naturalWidth={981}
-								srcWidths={[300, 400, 500, 600, 700, 800, 900]}
 								alt="Example normal map problem"
-								format="webp"
-								sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
 								class="h-auto w-full aspect-video"
-								loading="eager"
 							/></a
 						><p class="explanation">Problem: normal maps appear incorrectly if the asset importer mesh rotation feature is used.</p>
 					</div>
@@ -335,16 +311,13 @@ import { images } from '../../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/tree/treeimportfolder.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.treeimportfolder.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.treeimportfolder}
-							naturalHeight={149}
-							naturalWidth={459}
-							srcWidths={[200, 300, 400]}
 							alt="Files ready for import"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/></a
 					><p class="explanation">Files ready for import.</p>
 				</div>
@@ -388,16 +361,13 @@ import { images } from '../../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/tree/treeimportmesh.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.treeimportmesh.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.treeimportmesh}
-							naturalHeight={533}
-							naturalWidth={876}
-							srcWidths={[300, 400, 500, 600, 800]}
 							alt="Importing a mesh in asset importer"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/></a
 					><p class="explanation">Importing a mesh in asset importer.</p>
 				</div>
@@ -494,16 +464,13 @@ import { images } from '../../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/building/modtools.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.modtools.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.modtools}
-							naturalHeight={786}
-							naturalWidth={1503}
-							srcWidths={[300, 400, 800, 1000, 1200, 1500]}
 							alt="ModTools scene explorer and console"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/>
 					</a><p class="explanation">ModTools scene explorer and console.</p>
 				</div>
@@ -544,16 +511,13 @@ import { images } from '../../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/tree/treevariations.jpeg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.treevariations.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.treevariations}
-							naturalHeight={112}
-							naturalWidth={322}
-							srcWidths={[300]}
 							alt="Tree variations menu in the asset editor"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/>
 					</a><p class="explanation">Tree variations menu in the asset editor.</p>
 				</div>
@@ -567,16 +531,13 @@ import { images } from '../../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/tree/treesave.jpeg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.treesave.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.treesave}
-							naturalHeight={664}
-							naturalWidth={779}
-							srcWidths={[300, 400, 500, 600, 700]}
 							alt="Save asset window"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/>
 					</a><p class="explanation">Save asset window.</p>
 				</div>
@@ -608,16 +569,13 @@ import { images } from '../../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/building/local.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.local.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.local}
-							naturalHeight={226}
-							naturalWidth={595}
-							srcWidths={[300, 400, 500]}
 							alt="CRP files in the local assets folder"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
 							class="h-auto w-full aspect-video"
-							loading="eager"
 						/>
 					</a><p class="explanation">CRP files in the local assets folder.</p>
 				</div>
@@ -630,16 +588,13 @@ import { images } from '../../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/building/share.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.share.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.share}
-							naturalHeight={194}
-							naturalWidth={684}
-							srcWidths={[300, 400, 500, 600]}
 							alt="Share button in content manager"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/>
 					</a><p class="explanation">Share button in content manager.</p>
 				</div>
@@ -661,16 +616,13 @@ import { images } from '../../data/imageImports.js';
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/building/publish.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
+							width={images.publish.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							src={images.publish}
-							naturalHeight={591}
-							naturalWidth={721}
-							srcWidths={[300, 400, 500, 700]}
 							alt="Publish window and content folder"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-							class="h-auto w-full aspect-video object-cover"
-							loading="eager"
+							class="h-auto w-full"
 						/>
 					</a><p class="explanation">Publish window and content folder.</p>
 				</div>
@@ -725,20 +677,15 @@ import { images } from '../../data/imageImports.js';
 					</p><p class="mt-4">For local assets: filename.Asset Name_Data<br />For published workshop assets: SteamID.Asset Name_Data</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/building/prefab.jpg" target="_blank">
-					<ResponsiveImage
-						src={images.prefab}
-						naturalHeight={118}
-						naturalWidth={528}
-						srcWidths={[300, 400, 500]}
-						alt="Publish window and content folder"
-						format="webp"
-						sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
-						class="h-auto w-full aspect-video object-cover"
-						loading="eager"
-					/>
-				</a><p class="explanation">
-						Comparison between local (top) and workshop published (bottom) prefab names shown in ModTools.
-					</p>
+						<Picture
+							width={images.prefab.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
+							src={images.prefab}
+							alt="Publish window and content folder"
+							class="h-auto w-full"
+						/>
+					</a><p class="explanation">Comparison between local (top) and workshop published (bottom) prefab names shown in ModTools.</p>
 				</div>
 			</div>
 		</div>
