--- a/src/pages/lut.astro
+++ b/src/pages/lut.astro
@@ -3,70 +3,142 @@ import MainLayout from '../layouts/MainLayout.astro';
 import Link from '../components/Link.astro';
 import TableOfContents from '../components/TableOfContents.astro';
 const title = 'LUT - Cities Skylines Modding';
-import ResponsiveImage from '../components/ResponsiveImage.astro';
+import { Picture } from 'astro:assets';
 import { images } from '../data/imageImports.js';
 ---
 
 <MainLayout title={title}>
 	<TableOfContents />
 	<section class="py-12 sm:ml-64 xl:mr-64 text-lg text-hit-gray-500">
-		<h1 id="overview" class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400">LUT</h1>
+		<h1
+			id="overview"
+			class="border-b-4 border-hit-gray-600 pb-8 text-4xl font-bold text-hit-gray-400"
+		>
+			LUT
+		</h1>
 		<div class="content">
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="about">About</h2><div
-				class="flex flex-col lg:flex-row gap-6 mt-4"
+			<h2
+				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				id="about"
 			>
+				About
+			</h2><div class="flex flex-col lg:flex-row gap-6 mt-4">
 				<div class="lg:w-2/3">
-					<p>LUT stands for look-up table. It's a map of colors which allows applying color correction and adjustments to the image.</p>
+					<p>
+						LUT stands for look-up table. It's a map of colors which
+						allows applying color correction and adjustments to the
+						image.
+					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/lut/comp.jpg" target="_blank">
-						<ResponsiveImage
+						<Picture
 							src={images.comp}
-							naturalHeight={540}
-							naturalWidth={960}
-							srcWidths={[300, 400, 500, 600, 800, 900]}
+							width={images.comp.width / 2}
+							densities={[1.5, 2]}
+							formats={['avif', 'webp']}
 							alt="Comparison between the default LUT without any adjustments and a finished modified LUT"
-							format="webp"
-							sizes="(min-width: 1440px) 248px, (min-width: 1200px) 183px, (min-width: 1000px) 205px, (min-width: 780px) 448px, (min-width: 580px) 276px, calc(100vw - 48px)"
 							class="h-auto w-full aspect-video object-cover"
 							loading="eager"
 						/></a
 					><p class="explanation">
-						Comparison between the default LUT without any adjustments and a finished modified LUT. Using <a
-							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1209581656">Relight</a
+						Comparison between the default LUT without any
+						adjustments and a finished modified LUT. Using <a
+							href="https://steamcommunity.com/sharedfiles/filedetails/?id=1209581656"
+							>Relight</a
 						> with default/recommended settings.
 					</p>
 				</div>
 			</div>
-			<h4 class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12" id="folder">Folder</h4>
-			<p class="mt-4">The folder where you should put the LUT png is located here:</p>
-			<p class="mt-4"><span class="path">%LocalAppData%\Colossal Order\Cities_Skylines\Addons\ColorCorrections</span></p>
+			<h4
+				class="text-xl text-hit-gray-400 font-medium border-b border-hit-gray-950 pb-4 mt-8 lg:mt-12"
+				id="folder"
+			>
+				Folder
+			</h4>
 			<p class="mt-4">
-				The AppData folder is hidden by default, you can access it by copying and pasting the path into the file explorer, or pressing <span class="key"
-					>Windows + R</span
-				> and typing in appdata.
-			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="creation">Creation</h2>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="default-lut">Default LUT</h3>
-			<p class="mt-4">To create an LUT, you first need to download the default LUT which has no adjustments.</p>
-			<div class="content-download mt-4"><Link classes="" href="https://i.imgur.com/cgjH2nC.png" text="Download" theme="downloadbutton" /></div>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="adjustments">Adjustments</h3>
-			<p class="mt-4">
-				You should only apply per-pixel color adjustments, that means you cannot apply effects such as blur, sharpening, clarity, highlights/shadows, and many
-				other effects which are more than just a simple color adjustment.
+				The folder where you should put the LUT png is located here:
 			</p>
 			<p class="mt-4">
-				You can apply color adjustments such as brightness, contrast, levels, curves, exposure, vibrance, saturation, hue, color balance, black &amp; white,
-				color lookups, gradient maps, and selective color.
+				<span class="path"
+					>%LocalAppData%\Colossal
+					Order\Cities_Skylines\Addons\ColorCorrections</span>
 			</p>
-			<h3 class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4" id="16 bits/channel">16 bits/channel</h3>
 			<p class="mt-4">
-				When many adjustments are applied, working with a 16 bits/channel image can have the benefits of less noise and banding issues. But make sure the final
-				image is exported as 8 bits/channel, otherwise, the game won't recognize it.
+				The AppData folder is hidden by default, you can access it by
+				copying and pasting the path into the file explorer, or pressing
+				<span class="key">Windows + R</span> and typing in appdata.
 			</p>
-			<h2 class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400" id="example">Example</h2>
-			<p class="mt-4">Download a Photoshop file of an example LUT with various adjustments. Must be exported as 8 bits/channel png.</p>
+			<h2
+				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				id="creation"
+			>
+				Creation
+			</h2>
+			<h3
+				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
+				id="default-lut"
+			>
+				Default LUT
+			</h3>
+			<p class="mt-4">
+				To create an LUT, you first need to download the default LUT
+				which has no adjustments.
+			</p>
 			<div class="content-download mt-4">
-				<Link classes="" href="https://drive.google.com/open?id=1JuKMQ07VkDs_ZMVoFyvaRhowQ7N-vMrt" text="Download" theme="downloadbutton" />
+				<Link
+					classes=""
+					href="https://i.imgur.com/cgjH2nC.png"
+					text="Download"
+					theme="downloadbutton"
+				/>
+			</div>
+			<h3
+				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
+				id="adjustments"
+			>
+				Adjustments
+			</h3>
+			<p class="mt-4">
+				You should only apply per-pixel color adjustments, that means
+				you cannot apply effects such as blur, sharpening, clarity,
+				highlights/shadows, and many other effects which are more than
+				just a simple color adjustment.
+			</p>
+			<p class="mt-4">
+				You can apply color adjustments such as brightness, contrast,
+				levels, curves, exposure, vibrance, saturation, hue, color
+				balance, black &amp; white, color lookups, gradient maps, and
+				selective color.
+			</p>
+			<h3
+				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
+				id="16 bits/channel"
+			>
+				16 bits/channel
+			</h3>
+			<p class="mt-4">
+				When many adjustments are applied, working with a 16
+				bits/channel image can have the benefits of less noise and
+				banding issues. But make sure the final image is exported as 8
+				bits/channel, otherwise, the game won't recognize it.
+			</p>
+			<h2
+				class="border-b-2 border-hit-gray-600 mt-24 pb-8 text-4xl font-medium text-hit-gray-400"
+				id="example"
+			>
+				Example
+			</h2>
+			<p class="mt-4">
+				Download a Photoshop file of an example LUT with various
+				adjustments. Must be exported as 8 bits/channel png.
+			</p>
+			<div class="content-download mt-4">
+				<Link
+					classes=""
+					href="https://drive.google.com/open?id=1JuKMQ07VkDs_ZMVoFyvaRhowQ7N-vMrt"
+					text="Download"
+					theme="downloadbutton"
+				/>
 			</div>
 		</div>
 	</section>
