--- a/src/pages/asset/prop.astro
+++ b/src/pages/asset/prop.astro
@@ -58,7 +58,7 @@ import { images } from '../../data/imageImports.js';
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/prop/prtris.jpg" target="_blank">
 						<Picture
-							width={images.prtris.width / 2}
+							width={images.prtris.width / 4}
 							densities={[1.5, 2]}
 							formats={['avif', 'webp']}
 							src={images.prtris}
@@ -118,7 +118,7 @@ import { images } from '../../data/imageImports.js';
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/prop/prlodmesh.jpg" target="_blank">
 						<Picture
-							width={images.prlodmesh.width / 2}
+							width={images.prlodmesh.width / 4}
 							densities={[1.5, 2]}
 							formats={['avif', 'webp']}
 							src={images.prlodmesh}
@@ -1378,8 +1378,8 @@ import { images } from '../../data/imageImports.js';
 			<p class="mt-4">
 				Below thumbnail, on the right side. Use this one to change the
 				thumbnail (109x100) and tooltip (492x147) of your asset.<br />
-				Once you change the main thumbnail, the hover/active states will
-				update automatically.
+				 Once you change the main thumbnail, the hover/active states
+				will update automatically.
 			</p>
 			<h3
 				class="mt-16 text-2xl text-hit-gray-400 font-semibold border-b border-hit-gray-500 pb-4"
@@ -1401,7 +1401,7 @@ import { images } from '../../data/imageImports.js';
 						The AppData folder is hidden by default, you can access
 						it by copying and pasting the path into the file
 						explorer, or pressing <span class="key">Windows+R</span>
-						and typing in appdata.
+						 and typing in appdata.
 					</p>
 				</div><div class="lg:w-1/3">
 					<a href="/images/asset/building/local.jpg" target="_blank">
